deploy/ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openidc-apache
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx-administration"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: openidc-apache
          servicePort: 80
